--- a/src/main/resources/view/css/dark.css
+++ b/src/main/resources/view/css/dark.css
@@ -1,9 +1,14 @@
 .root{
   fx-background-color: black;
 }
+
 .text-area .content{
   -fx-background-color: black;
 }
-.button{
-  fx-background-color: black;
+
+.text-area {
+  -fx-font-family: Consolas;
+  -fx-highlight-fill: #00ff00;
+  -fx-highlight-text-fill: #000000;
+  -fx-text-fill: #00ff00;
 }
